InventoryManagement/force-app 2/main/default/objects/Custom_Product__c/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <label>price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>