InventoryManagement/force-app 2/main/default/objects/Custom_Product__c/fields/Product_Name_Long__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Long__c</fullName>
    <label>Product Name Long</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>