InventoryManagement/force-app 2/main/default/objects/Custom_Product__c/fields/Total_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Stock__c</fullName>
    <label>Total In Stock</label>
    <summarizedField>Custom_Inventory__c.Quantity__c</summarizedField>
    <summaryForeignKey>Custom_Inventory__c.Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>