InventoryManagement/force-app 2/main/default/objects/Custom_Product__c/fields/Total_Incoming__c.field-meta.xml
<CustomField>
    <fullName>Total_Incoming__c</fullName>
    <label>Total Incoming</label>
    <summarizedField>Custom_Order__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Custom_Order__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Inbound Order</value>
    </summaryFilterItems>
    <summaryForeignKey>Custom_Order__c.Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>