InventoryManagement/force-app 2/main/default/objects/Custom_Product__c/validationRules/price_greater_or_equal_to_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>price_greater_or_equal_to_zero</fullName>
    <active>true</active>
    <errorConditionFormula>ROUND(price__c,0)  &lt; 0</errorConditionFormula>
    <errorMessage>Price must be greater then or equal to zero</errorMessage>
</ValidationRule>